# School-Secretary

./: .dockerignore  .env.base  .env.prod  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ENDPOINTS_CODEBASE.txt  IMPLEMENTATION_SUMMARY.md  INSTALLATION.md  LLVM.txt  MANUAL_TESTING_GUIDE.md  MANUAL_TESTING_RESULTS.md  MIGRATION_INSTRUCTIONS.md  QUICKSTART.md  QUICKSTART_SEED.md  README.md  RESUMO_ALTERACOES.md  SECURITY.md  TESTING.md  TODO.md  compose.test.yaml  compose.yaml  controller.sh  create_test_data.py  default.env  manage.py  nginx.conf  publish.sh  requirements.txt  school_secretary  start.sh  test.sh  test_implementation.py
api/: .dockerignore  .env.example  Dockerfile  README.md  SEED_COMMAND_README.md  dev.sh  entrypoint.sh  fix.sh  healthcheck.py  manage.py  pyproject.toml  requirements.txt  school_secretary  test.sh
api/School-Secretary/: asgi.py  settings.py  urls.py  views.py  wsgi.py
api/academics/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
api/accounts/: admin.py  models.py  serializers.py  urls.py  views.py
api/resources/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
api/school/: admin.py  apps.py  middleware.py  models.py  serializers.py  signals.py  test_create_methods.py  tests.py  urls.py  views.py
api/scripts/: dev.sh
api/students/: admin.py  models.py  serializers.py  signals.py  urls.py  views.py
api/templates/: academic_report.html  bulletin.html  bulletin_report.html  contract.html  financial_report.html  grades.html  index.html  presence.html  student.html
api/users/: __init__.py  admin.py  api_error_audit.py  forms.py  (+10 more)
(+523 files in other folders)
